--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,62 +1,51 @@
 ---
 export interface Props {
-	title: string;
-	body: string;
-	href: string;
+  Title: string;
+  Data: string;
 }
 
-const { href, title, body } = Astro.props;
+const { Title, Data } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 0.15rem;
-		background-color: white;
-		background-image: var(--accent-gradient);
-		background-size: 400%;
-		border-radius: 0.5rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
-	}
+<article class="card">
+  <div class="card-header">{Title}</div>
+  <div class="card-body">{Data}</div>
+</article>
 
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1rem 1.3rem;
-		border-radius: 0.35rem;
-		color: #111;
-		background-color: white;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-		color: #444;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent));
-	}
+<style>
+  .card {
+    outline-color: #454545;
+    /* max-width: 40rem; */
+  }
+  .card-header {
+    min-height: 4rem;
+    background-color: #2e2e2e;
+    outline: #d8d7d5 solid 1px;
+    min-width: auto;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  .card-body {
+    min-height: 8rem;
+    background-color: #2e2e2e;
+    outline: #d8d7d5 solid 1px;
+    min-width: auto;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
 </style>
